force-app/main/default/objects/EmailMessage/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <description>Stamps Email with &apos;Inbound&apos; or &apos;Outbound&apos;</description>
    <formula>IF(Incoming = TRUE, &quot;Inbound&quot;,&quot;Outbound&quot;)</formula>
    <inlineHelpText>Stamps Email with &apos;Inbound&apos; or &apos;Outbound&apos;</inlineHelpText>
    <label>Email Type</label>
    <type>Text</type>
</CustomField>