force-app/main/default/objects/EmailMessage/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>