force-app/main/default/objects/EmailMessage/fields/Message_Size_MB__c.field-meta.xml
<CustomField>
    <fullName>Message_Size_MB__c</fullName>
    <description>Email msg size in MB</description>
    <formula>MessageSize / 1048576</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email msg size in MB</inlineHelpText>
    <label>Message Size (MB)</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>