force-app/main/default/objects/EmailMessage/validationRules/Restrict_Sending_from_Billing.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Sending_from_Billing</fullName>
    <active>true</active>
    <errorConditionFormula>AND
($Profile.Id  &lt;&gt; &quot;00e37000000hZbo&quot;,
FromAddress = &quot;billing@myubiquity.com&quot;)</errorConditionFormula>
    <errorMessage>Please change the &apos;from&apos; email address to a different email than billing@myubiquity.com</errorMessage>
</ValidationRule>