force-app/main/default/objects/EmailMessage/validationRules/Restrict_Sending_from_Compliance.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Sending_from_Compliance</fullName>
    <active>true</active>
    <errorConditionFormula>AND
($Profile.Id  &lt;&gt; &quot;00e1G0000011hkz&quot;,
$Profile.Id  &lt;&gt; &quot;00e37000000ZOlm&quot;,
FromAddress = &quot;compliance@myubiquity.com&quot;,
$Profile.Id  &lt;&gt; &quot;00e00000006ohd0&quot;,
$Profile.Id  &lt;&gt; &quot;00e1G0000011hdP&quot;)</errorConditionFormula>
    <errorMessage>Please change the &apos;from&apos; email address to a different email than compliance@myubiquity.com</errorMessage>
</ValidationRule>