force-app/main/default/objects/EmailMessage/validationRules/Restrict_Sending_from_Implementation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Sending_from_Implementation</fullName>
    <active>true</active>
    <errorConditionFormula>AND
($Profile.Id  &lt;&gt; &quot;00e1G0000011hjw&quot;,
FromAddress = &quot;newplan@myubiquity.com&quot;,
ISNULL(Parent.lntcss__Splited_From__c ))</errorConditionFormula>
    <errorMessage>Please change the &apos;from&apos; email address to a different email than newplan@myubiquity.com</errorMessage>
</ValidationRule>